# aws-util-python

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  PYPI_README.md  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml  labeler.yml  release-drafter.yml
.github/banners/: manifest.json
.github/workflows/: banner-archive.yml  build.yml  changelog.yml  ci.yml  codeql.yml  coverage.yml  dependency-review.yml  issue-triage.yml  label-pr.yml  lint.yml  lock-threads.yml  mutation.yml  pr-size.yml  publish.yml  release-drafter.yml  release-stats.yml  security-scan.yml  stale.yml  stats.yml  test.yml  typecheck.yml  update-badges.yml  version-check.yml  welcome.yml
releases/: downloads_2026-04-18.json  summary.json
src/aws_util/: __init__.py  _client.py  access_analyzer.py  acm.py  ai_ml_pipelines.py  analytics_pipelines.py  api_gateway.py  api_gateway_ops.py  app_runner.py  athena.py  autoscaling.py  batch.py  bedrock.py  bedrock_agent.py  bedrock_agent_runtime.py  blue_green.py  cache_ops.py  ci_cd_ops.py  cloudformation.py  cloudfront.py  cloudtrail.py  cloudwatch.py  codeartifact.py  codebuild.py  codecommit.py  codedeploy.py  codepipeline.py  codestar_connections.py  cognito.py  cognito_identity.py  comprehend.py  config_loader.py  config_service.py  config_state.py  connect.py  contact_center_ops.py  container_ops.py  cost_governance.py  cost_optimization.py  credential_rotation.py  (+108 more)
src/aws_util/aio/: __init__.py  _engine.py  access_analyzer.py  acm.py  ai_ml_pipelines.py  analytics_pipelines.py  api_gateway.py  api_gateway_ops.py  app_runner.py  athena.py  autoscaling.py  batch.py  bedrock.py  bedrock_agent.py  bedrock_agent_runtime.py  blue_green.py  cache_ops.py  ci_cd_ops.py  cloudformation.py  cloudfront.py  cloudtrail.py  cloudwatch.py  codeartifact.py  codebuild.py  codecommit.py  codedeploy.py  codepipeline.py  codestar_connections.py  cognito.py  cognito_identity.py  comprehend.py  config_loader.py  config_service.py  config_state.py  connect.py  contact_center_ops.py  container_ops.py  cost_governance.py  cost_optimization.py  credential_rotation.py  (+107 more)
tests/: test_acm.py  test_ai_ml_pipelines.py  test_aio_acm.py  test_aio_api_gateway.py  test_aio_app_runner.py  test_aio_athena.py  test_aio_autoscaling.py  test_aio_blue_green.py  test_aio_cloudformation.py  test_aio_cloudfront.py  test_aio_cloudtrail.py  test_aio_cloudwatch.py  test_aio_codebuild.py  test_aio_codecommit.py  test_aio_codedeploy.py  test_aio_codepipeline.py  test_aio_codestar_connections.py  test_aio_cognito_identity.py  test_aio_config_service.py  test_aio_connect.py  test_aio_container_ops.py  test_aio_cost_governance.py  test_aio_cost_optimization.py  test_aio_data_pipeline.py  test_aio_databrew.py  test_aio_disaster_recovery.py  test_aio_dynamodb.py  test_aio_ecr.py  test_aio_ecs.py  test_aio_efs.py  test_aio_eks.py  test_aio_elastic_beanstalk.py  test_aio_elbv2.py  test_aio_engine.py  test_aio_event_patterns.py  test_aio_forecast_query.py  test_aio_iam.py  test_aio_iot_sitewise.py  test_aio_ivs.py  test_aio_kinesis_analytics.py  (+108 more)
tests/integration/: conftest.py  test_integ_ai_ml_pipelines.py  test_integ_analytics_pipelines.py  test_integ_api_gateway_ops.py  test_integ_cache_ops.py  test_integ_ci_cd_ops.py  test_integ_config_loader.py  test_integ_contact_center_ops.py  test_integ_cost_optimization.py  test_integ_data_flow_etl.py  test_integ_deployment.py  test_integ_finding_ops.py  test_integ_governance.py  test_integ_iot_pipelines.py  test_integ_lambda_middleware.py  test_integ_media_processing.py  test_integ_networking.py  test_integ_observability.py  test_integ_resilience.py  test_integ_resource_ops.py  test_integ_security_ops.py  test_integ_storage_ops.py
tests/unit/: conftest.py  test_access_analyzer.py  test_ai_ml_pipelines.py  test_aio_access_analyzer.py  test_aio_ai_ml_pipelines.py  test_aio_batch.py  test_aio_bedrock.py  test_aio_bedrock_agent.py  test_aio_bedrock_agent_runtime.py  test_aio_codeartifact.py  test_aio_cognito.py  test_aio_comprehend.py  test_aio_config_loader.py  test_aio_config_state.py  test_aio_credential_rotation.py  test_aio_cross_account.py  test_aio_data_flow_etl.py  test_aio_data_lake.py  test_aio_database_migration.py  test_aio_deployer.py  test_aio_deployment.py  test_aio_detective.py  test_aio_dms.py  test_aio_documentdb.py  test_aio_ec2.py  test_aio_elasticache.py  test_aio_emr.py  test_aio_emr_containers.py  test_aio_emr_serverless.py  test_aio_event_orchestration.py  test_aio_eventbridge.py  test_aio_firehose.py  test_aio_forecast.py  test_aio_fsx.py  test_aio_glue.py  test_aio_health.py  test_aio_infra_automation.py  test_aio_inspector.py  test_aio_iot.py  test_aio_iot_data.py  (+112 more)
